revision des controller categorie event par rapport au status de chacun